# theia

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/lib/theia-common/: Cargo.toml
crates/lib/theia-cpu/: Cargo.toml  build.rs
crates/lib/theia-cpu-common/: Cargo.toml
crates/lib/theia-cpu-common/src/: lib.rs
crates/lib/theia-gpu/: Cargo.toml
crates/lib/theia-gpu/src/: lib.rs
