[package]
name = "theia-cpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
#Math
mint = "0.5.9"
num-traits = { version = "0.2.15", default-features = false, features = ["std"] }
approx = "0.5.1"
glam = { version = "0.22.0", default-features = false, features = ["std", "mint", "core-simd", "approx"] }

#Vulkan
ash = "0.37.2+1.3.238"
gpu-allocator = "0.22.0"

#Windowing
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
winit = { version = "0.28.1", features = ["mint"] }

[build-dependencies]
spirv-builder = "0.5.0"