[package]
name = "theia-cpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
#Util
once_cell = { version = "1.17.1", features = ["parking_lot"] }
parking_lot = { version = "0.12.1", features = ["arc_lock", "owning_ref", "nightly", "hardware-lock-elision"] }

#Math
bytemuck = "1.13.1"
half = { version = "2.2.1", default-features = false, features = ["std", "use-intrinsics", "num-traits", "bytemuck"] }
mint = "0.5.9"
num-traits = { version = "0.2.15", default-features = false, features = ["std"] }
glam = { version = "0.22.0", default-features = false, features = ["std", "mint", "core-simd", "bytemuck"] }
glam-pbr = { git = "https://github.com/expenses/glam-pbr.git" }

#Vulkan
ash = "0.37.2+1.3.238"
ash-bootstrap = { git = "https://github.com/brandonpollack23/ash-bootstrap.git" }
ashpan = "0.7.0"
vk-sync = { package = "vk-sync-fork", version = "0.4.0" }
gpu-allocator = "0.22.0"
gpu-descriptor = "0.2.3"
gpu-descriptor-ash = "0.2.0"

#Windowing
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
winit = { version = "0.28.1", features = ["mint"] }

#io
tokio = { version = "1.26.0", features = ["full"] }

#Shader STD
crevice = { version = "0.12.0", default-features = false, features = ["glam", "std"] }

[build-dependencies]
bincode = "1.3.3"
spirv-builder = "0.5.0"
spirv-extra-opt-passes = { git = "https://github.com/expenses/spirv-extra-opt-passes" }