[package]
name = "theia-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
#Math
bytemuck = "1.13.1"
half = { version = "2.2.1", default-features = false, features = ["num-traits", "bytemuck"] }
mint = "0.5.9"
num-traits = { version = "0.2.15", default-features = false, features = ["libm"] }
glam = { version = "0.22.0", default-features = false, features = ["libm", "mint", "bytemuck"] }
glam-pbr = { git = "https://github.com/expenses/glam-pbr.git" }

#Shader STD
spirv-std = { version = "0.5.0", features = ["glam"] }
crevice = { version = "0.12.0", default-features = false, features = ["glam"] }